sound/pci/hda/patch_realtek.c
@@ -6336,8 +6336,11 @@ static int patch_alc269(struct hda_codec *codec)
 		codec->power_save_node = 1;
 		/* fall through */
 	case 0x10ec0295:
+		spec->codec_variant = ALC269_TYPE_ALC225;
+		break;
 	case 0x10ec0299:
 		spec->codec_variant = ALC269_TYPE_ALC225;
+		spec->gen.mixer_nid = 0; /* no loopback on ALC299 */
 		break;
 	case 0x10ec0234:
 	case 0x10ec0274:
